added swagger document, and updated tne entpoints
