# rewardPoints/src/main/java/com/rewardPoints/dto/CustomerDTO.java
@@ -5,6 +5,14 @@ public class CustomerDTO {
 	 private String customerName;
 	    private String email;
 	    
+	    public CustomerDTO() {
+	    }
+
+	    public CustomerDTO(String customerName, String email) {
+	        this.customerName = customerName;
+	        this.email = email;
+	    }
+
 	    public String getCustomerName() {
 	        return customerName;
 	    }
